	configure.ac, server/gtk/main.c, server/main.c,
	client/gtk/callbacks.c, client/gtk/state.c, client/gtk/offline.c,
	client/gtk/gui.h, client/ai/ai.c: Added --debug for debug messages,
	instead of --enable-logging in configure.
	* Makefile.am: Added dependency for icons.
	* editor/gtk/Makefile.am, client/gtk/data/Makefile.am: Cleanup
	the *-icon.o files. (Enables 'make distcheck' on Cygwin)
	
2006-08-14  Bas Wijnen <shevek@fmf.nl>
	* client/gtk/data/Makefile.am, editor/gtk/Makefile.am: Remove
	incorrect direct dependency on *.rc files by executables.

2006-08-14  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/Makefile.am, README.subversion, configure.ac,
	Makefile.am, client/gtk/data/Makefile.am, client/gtk/Makefile.am:
	Reduce the need for netpbm.
	* client/gtk/connect.c: Translate the data from the meta server.
	* server/lobby.game: Tournament-time is not a keyword anymore.
	* client/gtk/interface.c: No build cursor during trade.
	* server/gtk/main.c, server/server.c, server/server.h, server/main.c,
	server/admin.c: Fix regression of random seating order dd 2006-08-10

2006-08-14  Bas Wijnen <shevek@fmf.nl>
	* client/callback.h, client/gtk/offline.h, client/common/client.c,
	client/common/main.c, client/ai/ai.h, client/ai/greedy.c,
	client/ai/ai/c: Make AI quit nicely instead of calling exit.  Also
	quit nicely if setup is impossible instead of crashing.

2006-08-11  Roland Clobus <rclobus@bigfoot.com>
	* client/common/client.c: Marked a string for translation.
	* client/gtk/interface.c: More robust gui_state changes.
	
2006-08-10  Roland Clobus <rclobus@bigfoot.com>
	* client/common/client.c: Don't say 'A is now A' in the client.
	* server/serer.c: Fix for a scope bug made 2006-08-05.
	* server/player.c, client/common/client.c: i18n for NOTE messages,
	close connection when a bad version is encountered, clearer message
	when entering a tournament game.
	* configure.ac: Protocol is now 0.10
	* common/game.c, common/game.h: Don't broadcast tournament-time.